--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Narmin438.github.io/my-app-r5",
+  "homepage": "https://Narmin438.github.io/my-app-r5",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
